--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   table_calendar: ^3.1.3
   flutter_local_notifications: ^19.3.1
   timezone: ^0.10.1
+  permission_handler: ^12.0.1
+  device_info_plus: ^11.5.0
+  android_alarm_manager_plus: ^4.0.7
 
 dev_dependencies:
   flutter_test:
